[gd_scene load_steps=16 format=3 uid="uid://h54lgaobtgd3"]

[ext_resource type="Script" path="res://main.gd" id="1_0fmv1"]
[ext_resource type="Texture2D" uid="uid://b18skc8fmr6rb" path="res://environment/Beach Tileset.png" id="2_dk0te"]
[ext_resource type="Texture2D" uid="uid://hdw5ebsolcxc" path="res://Snake/Snake.png" id="2_mm5pq"]
[ext_resource type="Script" path="res://Snake/Snake.gd" id="4_ljscv"]
[ext_resource type="PackedScene" uid="uid://cqo0eatqaanur" path="res://UI/hud.tscn" id="5_mapxp"]
[ext_resource type="PackedScene" uid="uid://c8qpw5iw71h5d" path="res://UI/game_over.tscn" id="6_hk7t3"]
[ext_resource type="Theme" uid="uid://c0ufm05l6hf8h" path="res://UI/main_theme.tres" id="6_n14qk"]
[ext_resource type="PackedScene" uid="uid://87k7tqdw85gm" path="res://UI/level_up.tscn" id="7_1egsf"]
[ext_resource type="PackedScene" uid="uid://bp51e1b24a71c" path="res://UI/stats.tscn" id="9_ev0bm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m6qpr"]
texture = ExtResource("2_dk0te")
texture_region_size = Vector2i(32, 32)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
8:4/0/custom_data_0 = true
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/bottom_right_corner = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/bottom_right_corner = 0
2:6/0/terrains_peering_bit/bottom_left_corner = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/terrains_peering_bit/bottom_left_corner = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/bottom_right_corner = 0
1:7/0/terrains_peering_bit/top_right_corner = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/bottom_right_corner = 0
2:7/0/terrains_peering_bit/bottom_left_corner = 0
2:7/0/terrains_peering_bit/top_left_corner = 0
2:7/0/terrains_peering_bit/top_right_corner = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/terrains_peering_bit/bottom_left_corner = 0
3:7/0/terrains_peering_bit/top_left_corner = 0
4:7/0 = 0
5:7/0 = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/terrains_peering_bit/top_right_corner = 0
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 0
2:8/0/terrains_peering_bit/top_left_corner = 0
2:8/0/terrains_peering_bit/top_right_corner = 0
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrain = 0
3:8/0/terrains_peering_bit/top_left_corner = 0
4:8/0 = 0
5:8/0 = 0
1:0/0 = 0
9:0/0 = 0
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
10:0/0 = 0
14:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hq3xo"]
texture = ExtResource("2_mm5pq")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:1/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_sca1g"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
custom_data_layer_0/name = "upside_down"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_hq3xo")
sources/0 = SubResource("TileSetAtlasSource_m6qpr")

[sub_resource type="Animation" id="Animation_1m4qp"]
resource_name = "to_normal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap:upside_down_transition")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause_snake_movement"
}, {
"args": [],
"method": &"resume_snake_movement"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TileMap")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_process_unhandled_input"
}, {
"args": [true],
"method": &"set_process_unhandled_input"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileMap")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_set_borders"
}]
}

[sub_resource type="Animation" id="Animation_3wg61"]
resource_name = "to_upside_down"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap:upside_down_transition")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause_snake_movement"
}, {
"args": [],
"method": &"resume_snake_movement"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TileMap")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_process_unhandled_input"
}, {
"args": [true],
"method": &"set_process_unhandled_input"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileMap")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_set_borders"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3cbco"]
_data = {
"to_normal": SubResource("Animation_1m4qp"),
"to_upside_down": SubResource("Animation_3wg61")
}

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_0fmv1")

[node name="TileMap" type="TileMap" parent="."]
process_mode = 1
tile_set = SubResource("TileSet_sca1g")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(1179670, 131072, 7, 524295, 131072, 7, 589831, 131072, 7, 655367, 131072, 7, 720903, 131072, 7, 786439, 131072, 7, 851975, 131072, 7, 1114119, 131072, 7, 1179655, 131072, 7, 524296, 131072, 7, 589832, 131072, 7, 655368, 131072, 7, 720904, 131072, 7, 983048, 131072, 7, 1048584, 131072, 7, 1114120, 131072, 7, 1179656, 131072, 7, 524297, 131072, 7, 589833, 131072, 7, 655369, 131072, 7, 851977, 131072, 7, 917513, 131072, 7, 983049, 131072, 7, 1048585, 131072, 7, 1114121, 131072, 7, 1179657, 131072, 7, 524298, 131072, 7, 720906, 131072, 7, 786442, 131072, 7, 851978, 131072, 7, 917514, 131072, 7, 983050, 131072, 7, 1048586, 131072, 7, 1114122, 131072, 7, 1179658, 131072, 7, 655371, 131072, 7, 720907, 131072, 7, 786443, 131072, 7, 851979, 131072, 7, 917515, 131072, 7, 983051, 131072, 7, 1048587, 131072, 7, 1114123, 131072, 7, 1179659, 131072, 7, 524300, 131072, 7, 589836, 131072, 7, 655372, 131072, 7, 720908, 131072, 7, 786444, 131072, 7, 851980, 131072, 7, 917516, 131072, 7, 983052, 131072, 7, 1048588, 131072, 7, 1114124, 131072, 7, 1179660, 131072, 7, 524301, 131072, 7, 589837, 131072, 7, 655373, 131072, 7, 720909, 131072, 7, 786445, 131072, 7, 851981, 131072, 7, 917517, 131072, 7, 983053, 131072, 7, 1048589, 131072, 7, 1114125, 131072, 7, 1179661, 131072, 7, 524302, 131072, 7, 589838, 131072, 7, 655374, 131072, 7, 720910, 131072, 7, 786446, 131072, 7, 851982, 131072, 7, 917518, 131072, 7, 983054, 131072, 7, 1048590, 131072, 7, 1114126, 131072, 7, 1179662, 131072, 7, 524303, 131072, 7, 589839, 131072, 7, 655375, 131072, 7, 720911, 131072, 7, 786447, 131072, 7, 851983, 131072, 7, 917519, 131072, 7, 983055, 131072, 7, 1048591, 131072, 7, 1114127, 131072, 7, 1179663, 131072, 7, 524304, 131072, 7, 589840, 131072, 7, 655376, 131072, 7, 720912, 131072, 7, 786448, 131072, 7, 851984, 131072, 7, 917520, 131072, 7, 983056, 131072, 7, 1048592, 131072, 7, 1114128, 131072, 7, 1179664, 131072, 7, 524305, 131072, 7, 589841, 131072, 7, 655377, 131072, 7, 720913, 131072, 7, 786449, 131072, 7, 851985, 131072, 7, 917521, 131072, 7, 983057, 131072, 7, 1048593, 131072, 7, 1114129, 131072, 7, 1179665, 131072, 7, 524306, 131072, 7, 589842, 131072, 7, 655378, 131072, 7, 720914, 131072, 7, 786450, 131072, 7, 851986, 131072, 7, 917522, 131072, 7, 983058, 131072, 7, 1048594, 131072, 7, 1114130, 131072, 7, 1179666, 131072, 7, 524307, 131072, 7, 589843, 131072, 7, 655379, 131072, 7, 720915, 131072, 7, 786451, 131072, 7, 851987, 131072, 7, 917523, 131072, 7, 983059, 131072, 7, 1048595, 131072, 7, 1114131, 131072, 7, 1179667, 131072, 7, 524308, 131072, 7, 589844, 131072, 7, 655380, 131072, 7, 720916, 131072, 7, 786452, 131072, 7, 851988, 131072, 7, 917524, 131072, 7, 983060, 131072, 7, 1048596, 131072, 7, 1114132, 131072, 7, 1179668, 131072, 7, 524309, 131072, 7, 589845, 131072, 7, 655381, 131072, 7, 720917, 131072, 7, 786453, 131072, 7, 851989, 131072, 7, 917525, 131072, 7, 983061, 131072, 7, 1048597, 131072, 7, 1114133, 131072, 7, 1179669, 131072, 7, 524310, 131072, 7, 589846, 131072, 7, 655382, 131072, 7, 720918, 131072, 7, 786454, 131072, 7, 851990, 131072, 7, 917526, 131072, 7, 983062, 131072, 7, 1048598, 131072, 7, 1114134, 131072, 7, 524311, 131072, 7, 589847, 131072, 7, 655383, 131072, 7, 720919, 131072, 7, 786455, 131072, 7, 851991, 131072, 7, 917527, 131072, 7, 983063, 131072, 7, 1048599, 131072, 7, 1114135, 131072, 7, 1179671, 131072, 7, 524312, 131072, 7, 589848, 131072, 7, 655384, 131072, 7, 720920, 131072, 7, 786456, 131072, 7, 851992, 131072, 7, 917528, 131072, 7, 983064, 131072, 7, 1048600, 131072, 7, 1114136, 131072, 7, 1179672, 131072, 7, 524313, 131072, 7, 589849, 131072, 7, 655385, 131072, 7, 720921, 131072, 7, 786457, 131072, 7, 851993, 131072, 7, 917529, 131072, 7, 983065, 131072, 7, 1048601, 131072, 7, 1114137, 131072, 7, 1179673, 131072, 7, 524314, 131072, 7, 589850, 131072, 7, 655386, 131072, 7, 720922, 131072, 7, 786458, 131072, 7, 851994, 131072, 7, 917530, 131072, 7, 983066, 131072, 7, 1048602, 131072, 7, 1114138, 131072, 7, 1179674, 131072, 7, 524315, 131072, 7, 589851, 131072, 7, 655387, 131072, 7, 720923, 131072, 7, 786459, 131072, 7, 851995, 131072, 7, 917531, 131072, 7, 983067, 131072, 7, 1048603, 131072, 7, 1114139, 131072, 7, 1179675, 131072, 7, 524316, 131072, 7, 589852, 131072, 7, 655388, 131072, 7, 720924, 131072, 7, 786460, 131072, 7, 851996, 131072, 7, 917532, 131072, 7, 983068, 131072, 7, 1048604, 131072, 7, 1114140, 131072, 7, 1179676, 131072, 7, 524317, 131072, 7, 589853, 131072, 7, 655389, 131072, 7, 720925, 131072, 7, 786461, 131072, 7, 851997, 131072, 7, 917533, 131072, 7, 983069, 131072, 7, 1048605, 131072, 7, 1114141, 131072, 7, 1179677, 131072, 7, 524318, 131072, 7, 589854, 131072, 7, 655390, 131072, 7, 720926, 131072, 7, 786462, 131072, 7, 851998, 131072, 7, 917534, 131072, 7, 983070, 131072, 7, 1048606, 131072, 7, 1114142, 131072, 7, 1179678, 131072, 7, 524319, 131072, 7, 589855, 131072, 7, 655391, 131072, 7, 720927, 131072, 7, 786463, 131072, 7, 851999, 131072, 7, 917535, 131072, 7, 983071, 131072, 7, 1048607, 131072, 7, 1114143, 131072, 7, 1179679, 131072, 7, 524320, 131072, 7, 589856, 131072, 7, 655392, 131072, 7, 720928, 131072, 7, 786464, 131072, 7, 852000, 131072, 7, 917536, 131072, 7, 983072, 131072, 7, 1048608, 131072, 7, 1114144, 131072, 7, 1179680, 131072, 7, 524321, 131072, 7, 589857, 131072, 7, 655393, 131072, 7, 720929, 131072, 7, 786465, 131072, 7, 852001, 131072, 7, 917537, 131072, 7, 983073, 131072, 7, 1048609, 131072, 7, 1114145, 131072, 7, 1179681, 131072, 7, 524322, 131072, 7, 589858, 131072, 7, 655394, 131072, 7, 720930, 131072, 7, 786466, 131072, 7, 852002, 131072, 7, 917538, 131072, 7, 983074, 131072, 7, 1048610, 131072, 7, 1114146, 131072, 7, 1179682, 131072, 7, 65537, 131072, 7, 131073, 131072, 7, 196609, 131072, 7, 262145, 131072, 7, 327681, 131072, 7, 393217, 131072, 7, 458753, 131072, 7, 524289, 131072, 7, 589825, 131072, 7, 655361, 131072, 7, 720897, 131072, 7, 786433, 131072, 7, 851969, 131072, 7, 917505, 131072, 7, 983041, 131072, 7, 1048577, 131072, 7, 1114113, 131072, 7, 1179649, 131072, 7, 65538, 131072, 7, 131074, 131072, 7, 196610, 131072, 7, 262146, 131072, 7, 327682, 131072, 7, 393218, 131072, 7, 458754, 131072, 7, 524290, 131072, 7, 589826, 131072, 7, 655362, 131072, 7, 720898, 131072, 7, 786434, 131072, 7, 851970, 131072, 7, 917506, 131072, 7, 983042, 131072, 7, 1048578, 131072, 7, 1114114, 131072, 7, 1179650, 131072, 7, 65539, 131072, 7, 131075, 131072, 7, 196611, 131072, 7, 262147, 131072, 7, 327683, 131072, 7, 393219, 131072, 7, 458755, 131072, 7, 524291, 131072, 7, 589827, 131072, 7, 655363, 131072, 7, 720899, 131072, 7, 65540, 131072, 7, 131076, 131072, 7, 196612, 131072, 7, 262148, 131072, 7, 327684, 131072, 7, 393220, 131072, 7, 458756, 131072, 7, 524292, 131072, 7, 589828, 131072, 7, 655364, 131072, 7, 720900, 131072, 7, 786436, 131072, 7, 851972, 131072, 7, 917508, 131072, 7, 983044, 131072, 7, 1048580, 131072, 7, 1114116, 131072, 7, 1179652, 131072, 7, 65541, 131072, 7, 131077, 131072, 7, 196613, 131072, 7, 262149, 131072, 7, 327685, 131072, 7, 393221, 131072, 7, 458757, 131072, 7, 524293, 131072, 7, 589829, 131072, 7, 655365, 131072, 7, 720901, 131072, 7, 786437, 131072, 7, 851973, 131072, 7, 917509, 131072, 7, 983045, 131072, 7, 1048581, 131072, 7, 1114117, 131072, 7, 65542, 131072, 7, 131078, 131072, 7, 196614, 131072, 7, 262150, 131072, 7, 327686, 131072, 7, 393222, 131072, 7, 458758, 131072, 7, 524294, 131072, 7, 589830, 131072, 7, 655366, 131072, 7, 720902, 131072, 7, 786438, 131072, 7, 851974, 131072, 7, 917510, 131072, 7, 983046, 131072, 7, 65543, 131072, 7, 131079, 131072, 7, 196615, 131072, 7, 262151, 131072, 7, 327687, 131072, 7, 393223, 131072, 7, 458759, 131072, 7, 65544, 131072, 7, 131080, 131072, 7, 196616, 131072, 7, 262152, 131072, 7, 327688, 131072, 7, 393224, 131072, 7, 458760, 131072, 7, 65545, 131072, 7, 131081, 131072, 7, 196617, 131072, 7, 262153, 131072, 7, 327689, 131072, 7, 393225, 131072, 7, 458761, 131072, 7, 65546, 131072, 7, 131082, 131072, 7, 196618, 131072, 7, 262154, 131072, 7, 327690, 131072, 7, 393226, 131072, 7, 458762, 131072, 7, 65547, 131072, 7, 131083, 131072, 7, 196619, 131072, 7, 262155, 131072, 7, 327691, 131072, 7, 393227, 131072, 7, 65548, 131072, 7, 131084, 131072, 7, 196620, 131072, 7, 262156, 131072, 7, 65549, 131072, 7, 131085, 131072, 7, 327693, 131072, 7, 393229, 131072, 7, 458765, 131072, 7, 262158, 131072, 7, 327694, 131072, 7, 393230, 131072, 7, 458766, 131072, 7, 131087, 131072, 7, 196623, 131072, 7, 262159, 131072, 7, 327695, 131072, 7, 393231, 131072, 7, 458767, 131072, 7, 131088, 131072, 7, 196624, 131072, 7, 262160, 131072, 7, 327696, 131072, 7, 393232, 131072, 7, 458768, 131072, 7, 65553, 131072, 7, 131089, 131072, 7, 196625, 131072, 7, 262161, 131072, 7, 327697, 131072, 7, 393233, 131072, 7, 458769, 131072, 7, 65554, 131072, 7, 131090, 131072, 7, 196626, 131072, 7, 262162, 131072, 7, 327698, 131072, 7, 393234, 131072, 7, 458770, 131072, 7, 65555, 131072, 7, 131091, 131072, 7, 196627, 131072, 7, 262163, 131072, 7, 327699, 131072, 7, 393235, 131072, 7, 458771, 131072, 7, 65556, 131072, 7, 131092, 131072, 7, 196628, 131072, 7, 262164, 131072, 7, 327700, 131072, 7, 393236, 131072, 7, 458772, 131072, 7, 65557, 131072, 7, 131093, 131072, 7, 196629, 131072, 7, 262165, 131072, 7, 327701, 131072, 7, 393237, 131072, 7, 458773, 131072, 7, 65558, 131072, 7, 131094, 131072, 7, 196630, 131072, 7, 262166, 131072, 7, 327702, 131072, 7, 393238, 131072, 7, 458774, 131072, 7, 65559, 131072, 7, 131095, 131072, 7, 196631, 131072, 7, 262167, 131072, 7, 327703, 131072, 7, 393239, 131072, 7, 458775, 131072, 7, 65560, 131072, 7, 131096, 131072, 7, 196632, 131072, 7, 262168, 131072, 7, 327704, 131072, 7, 393240, 131072, 7, 458776, 131072, 7, 65561, 131072, 7, 131097, 131072, 7, 196633, 131072, 7, 262169, 131072, 7, 327705, 131072, 7, 393241, 131072, 7, 458777, 131072, 7, 65562, 131072, 7, 131098, 131072, 7, 196634, 131072, 7, 262170, 131072, 7, 327706, 131072, 7, 393242, 131072, 7, 458778, 131072, 7, 65563, 131072, 7, 131099, 131072, 7, 196635, 131072, 7, 262171, 131072, 7, 327707, 131072, 7, 393243, 131072, 7, 458779, 131072, 7, 65564, 131072, 7, 131100, 131072, 7, 196636, 131072, 7, 262172, 131072, 7, 327708, 131072, 7, 393244, 131072, 7, 458780, 131072, 7, 65565, 131072, 7, 131101, 131072, 7, 196637, 131072, 7, 262173, 131072, 7, 327709, 131072, 7, 393245, 131072, 7, 458781, 131072, 7, 65566, 131072, 7, 131102, 131072, 7, 196638, 131072, 7, 262174, 131072, 7, 327710, 131072, 7, 393246, 131072, 7, 458782, 131072, 7, 65567, 131072, 7, 131103, 131072, 7, 196639, 131072, 7, 262175, 131072, 7, 327711, 131072, 7, 393247, 131072, 7, 458783, 131072, 7, 65568, 131072, 7, 131104, 131072, 7, 196640, 131072, 7, 262176, 131072, 7, 327712, 131072, 7, 393248, 131072, 7, 458784, 131072, 7, 65569, 131072, 7, 131105, 131072, 7, 196641, 131072, 7, 262177, 131072, 7, 327713, 131072, 7, 393249, 131072, 7, 458785, 131072, 7, 65570, 131072, 7, 131106, 131072, 7, 196642, 131072, 7, 262178, 131072, 7, 327714, 131072, 7, 393250, 131072, 7, 458786, 131072, 7, 786435, 131072, 7, 851971, 131072, 7, 917507, 131072, 7, 983043, 131072, 7, 1048579, 131072, 7, 1114115, 131072, 7, 1179651, 131072, 7, 1179653, 131072, 7, 1048582, 131072, 7, 1114118, 131072, 7, 1179654, 131072, 7, 917511, 131072, 7, 983047, 131072, 7, 1048583, 131072, 7, 786440, 131072, 7, 851976, 131072, 7, 917512, 131072, 7, 720905, 131072, 7, 786441, 131072, 7, 589834, 131072, 7, 655370, 131072, 7, 458763, 131072, 7, 524299, 131072, 7, 589835, 131072, 7, 327692, 131072, 7, 393228, 131072, 7, 458764, 131072, 7, 196621, 131072, 7, 262157, 131072, 7, 65550, 131072, 7, 131086, 131072, 7, 196622, 131072, 7, 65551, 131072, 7, 65552, 131072, 7)
layer_1/name = "Snake"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 20
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Collectible"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 5
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Obstacle"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 2
layer_3/tile_data = PackedInt32Array()
layer_4/name = "Border"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 15
layer_4/tile_data = PackedInt32Array(1, 131072, 6, 2, 131072, 6, 3, 131072, 6, 4, 131072, 6, 5, 131072, 6, 6, 131072, 6, 7, 131072, 6, 8, 131072, 6, 9, 131072, 6, 10, 131072, 6, 11, 131072, 6, 12, 131072, 6, 13, 131072, 6, 14, 131072, 6, 15, 131072, 6, 16, 131072, 6, 17, 131072, 6, 18, 131072, 6, 19, 131072, 6, 20, 131072, 6, 21, 131072, 6, 22, 131072, 6, 23, 131072, 6, 24, 131072, 6, 25, 131072, 6, 26, 131072, 6, 27, 131072, 6, 28, 131072, 6, 29, 131072, 6, 30, 131072, 6, 31, 131072, 6, 32, 131072, 6, 33, 131072, 6, 34, 131072, 6, 1245185, 131072, 8, 1245186, 131072, 8, 1245187, 131072, 8, 1245188, 131072, 8, 1245189, 131072, 8, 1245190, 131072, 8, 1245191, 131072, 8, 1245192, 131072, 8, 1245193, 131072, 8, 1245194, 131072, 8, 1245195, 131072, 8, 1245196, 131072, 8, 1245197, 131072, 8, 1245198, 131072, 8, 1245199, 131072, 8, 1245200, 131072, 8, 1245201, 131072, 8, 1245202, 131072, 8, 1245203, 131072, 8, 1245204, 131072, 8, 1245205, 131072, 8, 1245206, 131072, 8, 1245207, 131072, 8, 1245208, 131072, 8, 1245209, 131072, 8, 1245210, 131072, 8, 1245211, 131072, 8, 1245212, 131072, 8, 1245213, 131072, 8, 1245214, 131072, 8, 1245215, 131072, 8, 1245216, 131072, 8, 1245217, 131072, 8, 1245218, 131072, 8, 65571, 196608, 7, 131107, 196608, 7, 196643, 196608, 7, 262179, 196608, 7, 327715, 196608, 7, 393251, 196608, 7, 458787, 196608, 7, 524323, 196608, 7, 589859, 196608, 7, 655395, 196608, 7, 720931, 196608, 7, 786467, 196608, 7, 852003, 196608, 7, 917539, 196608, 7, 983075, 196608, 7, 1048611, 196608, 7, 1114147, 196608, 7, 1179683, 196608, 7, 65536, 65536, 7, 131072, 65536, 7, 196608, 65536, 7, 262144, 65536, 7, 327680, 65536, 7, 393216, 65536, 7, 458752, 65536, 7, 524288, 65536, 7, 589824, 65536, 7, 655360, 65536, 7, 720896, 65536, 7, 786432, 65536, 7, 851968, 65536, 7, 917504, 65536, 7, 983040, 65536, 7, 1048576, 65536, 7, 1114112, 65536, 7, 1179648, 65536, 7, 0, 65536, 6, 35, 196608, 6, 1245219, 196608, 8, 1245184, 65536, 8)
script = ExtResource("4_ljscv")

[node name="MoveSnakeTimer" type="Timer" parent="TileMap"]
wait_time = 0.2

[node name="StartPosiiton" type="Node2D" parent="TileMap"]
position = Vector2(571, 313)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMap"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_3cbco")
}

[node name="FoodSpawnTimer" type="Timer" parent="TileMap"]
wait_time = 3.0
autostart = true

[node name="ObstacleSpawnTimer" type="Timer" parent="TileMap"]
wait_time = 2.0
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 1

[node name="HUD" parent="GUI" instance=ExtResource("5_mapxp")]
theme = ExtResource("6_n14qk")

[node name="game_over" parent="GUI" instance=ExtResource("6_hk7t3")]
process_mode = 2
visible = false

[node name="LevelUp" parent="GUI" instance=ExtResource("7_1egsf")]
visible = false

[node name="Stats" parent="GUI" instance=ExtResource("9_ev0bm")]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -227.0
offset_right = 304.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="TileMap/MoveSnakeTimer" to="TileMap" method="_on_move_snake_timer_timeout"]
[connection signal="animation_finished" from="TileMap/AnimationPlayer" to="TileMap" method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="TileMap/AnimationPlayer" to="TileMap" method="_on_animation_player_animation_started"]
[connection signal="timeout" from="TileMap/FoodSpawnTimer" to="TileMap" method="_on_food_spawn_timer_timeout"]
[connection signal="timeout" from="TileMap/ObstacleSpawnTimer" to="TileMap" method="_on_obstacle_spawn_timer_timeout"]
